--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,26 @@
-torch==2.2.0
-torchaudio==2.2.0
-TTS==0.22.0 
-tortoise-tts         
-gpt-sovits
-resemblyzer
-soundfile
-numpy
+# Core dependencies
+numpy>=1.22.0,<2.0.0
+scipy>=1.9.0
+
+# PyTorch (compatible con Python 3.10)
+torch>=2.0.0,<2.3.0
+torchaudio>=2.0.0,<2.3.0
+
+# TTS Models - Coqui TTS incluye XTTS v2 y YourTTS
+TTS>=0.22.0                    # Incluye XTTS v2 y YourTTS para clonación de voz
+transformers>=4.33.0,<4.37.0   # Compatible con XTTS v2
+
+# Audio processing
+librosa>=0.9.2
+soundfile>=0.12.0
+audioread>=3.0.0
+pydub>=0.25.1
+
+# Metrics and evaluation
+resemblyzer>=0.1.3             # Speaker similarity embeddings para clonación de voz
+scikit-learn>=1.2.0            # Métricas adicionales
+
+# Utilities
+tqdm>=4.65.0
+pyyaml>=6.0
+requests>=2.28.0
